--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flask (>=3.1.0,<4.0.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "flask-cors (>=5.0.0,<6.0.0)",
+    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
 ]
 
 
