Working docker containers in pi

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Backend Settings
 SECRET_KEY=your-secret-key-here
-DATABASE_URL=sqlite:///app.db
+DATABASE_URL=sqlite:///email.db
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_EMAIL=your-email@gmail.com
@@ -8,6 +8,3 @@ SMTP_PASSWORD=your-app-password
 
 # Development Mode (Uvicorn reload)
 BACKEND_DEBUG=true
-# Frontend Settings
-FRONTEND_URL=http://localhost:3000
-BACKEND_URL=http://localhost:5000
