--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,14 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "flask (>=3.1.0,<4.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "flask-cors (>=5.0.0,<6.0.0)",
-    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "sqlalchemy (>=2.0.25,<3.0.0)",
-    "pydantic (>=2.5.3,<3.0.0)",
+    "pydantic[email] (>=2.10.6,<3.0.0)",
     "pydantic[email] (>=2.5.3,<3.0.0)",
     "python-multipart (>=0.0.7,<1.0.0)"
 ]
