--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "danaul_dark_circle_logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
