--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "sqlalchemy (>=2.0.25,<3.0.0)",
     "pydantic[email] (>=2.10.6,<3.0.0)",
     "pydantic[email] (>=2.5.3,<3.0.0)",
-    "python-multipart (>=0.0.7,<1.0.0)"
+    "python-multipart (>=0.0.7,<1.0.0)",
+    "alembic (>=1.14.1,<2.0.0)"
 ]
 
 
