--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Backend Settings
 SECRET_KEY=your-secret-key-here
-DATABASE_URL=sqlite:///email.db
+DATABASE_FILE_NAME=email.db
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_EMAIL=your-email@gmail.com
