--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -25,7 +25,7 @@ FROM nginx:stable-alpine
 COPY --from=build /frontend_app/build /usr/share/nginx/html
 
 # Copy a custom Nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+#COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
