--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
 services:
+  # Services for prod profile (direct access)
   backend:
     image: lambki/email-sender-backend:latest
     container_name: backend
     build:
       context: ./backend
       dockerfile: Dockerfile
-    restart: always # or "unless-stopped" for production
+    restart: always
     ports:
       - "${BACKEND_PORT}:8000"
     volumes:
       - ./backend/db:/backend_app/db
       - ./backend/uploads:/backend_app/uploads
     environment:
-      # For CORS
-      # dev
-      #ALLOWED_ORIGIN_URLS: all
-      # product
-      ALLOWED_ORIGIN_URLS: http://${IP_ADDR}:${FRONTEND_PORT}
+      # Allow all origins since everything goes through nginx proxy
+      ALLOWED_ORIGIN_URLS: all
     env_file:
       - ./backend/.env
     networks:
       - app-network
+    profiles:
+      - prod
 
   frontend:
     image: lambki/email-sender-frontend:latest
@@ -29,23 +29,82 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        # dev
-        # REACT_APP_BACKEND_URL: "http://localhost:${BACKEND_PORT}"
-        # product
-        REACT_APP_BACKEND_URL: "http://${IP_ADDR}:${BACKEND_PORT}"
-    restart: always # or "unless-stopped" for production
+        # REACT_APP_BACKEND_URL: "http://${IP_ADDR}:${BACKEND_PORT}/api"
+        # For prod profile with separate nginx proxy, use relative URL
+        REACT_APP_BACKEND_URL: "/email_sender/api"
+        PUBLIC_URL: "/email_sender"
+    restart: always
     ports:
-      # For nginx
       - "${FRONTEND_PORT}:80"
     volumes:
       - ./frontend:/frontend
     depends_on:
       - backend
-    # Optionally, you can also set the runtime environment, but it won't affect the built code:
-    # environment:
-    #   REACT_APP_BACKEND_URL: http://danaulns.iptime.org:${BACKEND_PORT}
     networks:
       - app-network
+    profiles:
+      - prod
+
+  # Services for nginx-prod profile (nginx proxy)
+  backend-nginx:
+    image: lambki/email-sender-backend:latest
+    container_name: backend-nginx
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    restart: always
+    expose:
+      - "8000"
+    volumes:
+      - ./backend/db:/backend_app/db
+      - ./backend/uploads:/backend_app/uploads
+    environment:
+      # Allow all origins since everything goes through nginx proxy
+      ALLOWED_ORIGIN_URLS: all
+    env_file:
+      - ./backend/.env
+    networks:
+      - app-network
+    profiles:
+      - nginx-prod
+
+  frontend-nginx:
+    image: lambki/email-sender-frontend:latest
+    container_name: frontend-nginx
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        # Use relative URL - works regardless of IP/hostname
+        REACT_APP_BACKEND_URL: "/email_sender/api"
+        PUBLIC_URL: "/email_sender"
+    restart: always
+    expose:
+      - "80"
+    volumes:
+      - ./frontend:/frontend
+    depends_on:
+      - backend-nginx
+    networks:
+      - app-network
+    profiles:
+      - nginx-prod
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    restart: always
+    ports:
+      - "${NGINX_PORT}:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - backend-nginx
+      - frontend-nginx
+    networks:
+      - app-network
+    profiles:
+      - nginx-prod
 
 networks:
   app-network:
