porting to nextjs

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-# nginx external port
+# Frontend (Next.js) external port
 FRONTEND_PORT=3000
-# fastapi external port
-BACKEND_PORT=5011
-# nginx port when external nginx server is used
-NGINX_PORT=8080
+
+# Backend (FastAPI) external port
+BACKEND_PORT=8080
+
+# IP address for external access (use your server IP in production)
+IP_ADDR=localhost
